instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:26: error: not found: value doite
doite()
^