instructions.InstructionsDrawG.scala.code
baisseBrosse()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
leveBrosse()
droite()
avance()
avance()
doite()
avance()
gauche()